change comment on test

--- a/game.ipynb
+++ b/game.ipynb
@@ -97,7 +97,7 @@
    ],
    "source": [
     "# This is for testing our environment\n",
-    "# I'll not recommand people to run this part because it might crash your python kernel\n",
+    "# Uncomment if you want to see how the game works\n",
     "\n",
     "# episodes = 5\n",
     "\n",
