fix #4 and fix #1

--- a/game.ipynb
+++ b/game.ipynb
@@ -28,10 +28,31 @@
  "cells": [
   {
    "source": [
-    "# Set Up and Test Environment with OpenAI Gym"
+    "# Reinforcement Learning on OpenAI Space Invader \n",
+    "\n",
+    "- Using **OpenAI Atari Library** (gym) to provide the environment for Space Invader\n",
+    "- Using **Convolutional Neural Network** (Tensorflow and Keras) to create our training model\n",
+    "- Using **Reinforcement Learning** (Keras-RL2) to train our program to play Space Invader"
    ],
    "cell_type": "markdown",
    "metadata": {}
+  },
+  {
+   "source": [
+    "# Setting Up Our Libraries"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Install the require packages here\n",
+    "!pip install -r requirements.txt"
+   ]
   },
   {
    "cell_type": "code",
@@ -39,6 +60,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Check it here after installation\n",
     "import gym\n",
     "import random as r \n",
     "\n",
@@ -53,6 +75,13 @@
     "from rl.memory import SequentialMemory\n",
     "from rl.policy import LinearAnnealedPolicy, EpsGreedyQPolicy"
    ]
+  },
+  {
+   "source": [
+    "# Set Up and Test Environment with OpenAI Gym"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
    "cell_type": "code",
@@ -119,7 +148,10 @@
   },
   {
    "source": [
-    "# Create a Deep Learning Model with Keras and Tensorflow"
+    "# Create a Deep Learning Model with Keras and Tensorflow\n",
+    "\n",
+    "- Build our **Deep Q Neural Network**\n",
+    "    - We will be create a **Convolutional Neural Network**, which will be the neural network that we will use to train our program\n"
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -131,6 +163,18 @@
    "outputs": [],
    "source": [
     "def buildModel(height, width, channels, actions):\n",
+    "    \"\"\"\n",
+    "        Build our Deep Learning Model\n",
+    "\n",
+    "        Args:\n",
+    "            height: height of the space environment\n",
+    "            width: width of the space environment\n",
+    "            channels: channels of our space environment \n",
+    "            actions: actions that the agent is going to perform\n",
+    "\n",
+    "        Return:\n",
+    "            model: A Deep Neural Network that is ready for training\n",
+    "    \"\"\"\n",
     "    model = Sequential()\n",
     "    model.add(Conv2D(32, (8,8), strides=(4,4), activation='relu', input_shape=(3, height, width, channels)))\n",
     "    model.add(Conv2D(64, (4,4), strides=(2,2), activation='relu'))\n",
@@ -157,13 +201,33 @@
     }
    ],
    "source": [
+    "# Create our model\n",
     "model = buildModel(height, width, channels, actions)\n",
     "model.summary()"
    ]
   },
   {
    "source": [
-    "# Build Agent with Keras-RL"
+    "# Build Agent with Keras-RL\n",
+    "\n",
+    "- Applying Keras' reinforcement learning library (Keras-RL)\n",
+    "\n",
+    "## Reinforcement Learning\n",
+    "\n",
+    "<img width=\"500\" alt=\"portfolio_view\" src=\"src/reinforcement-learning.jpg\">\n",
+    "\n",
+    "- We start with an agent, which will be our shooter in this case\n",
+    "- Our environment is the game itself\n",
+    "- Our agent will perform an action\n",
+    "- After the agent perform its action, it will receive a number called reward\n",
+    "    - Reward is also known as a Q-value, which will will be calculated by a formula called Q-function\n",
+    "    - Q-function captures the expected total future reward an agent in state (s) \n",
+    "    - ![Insert diagram or equation](src/qFunction.png)\n",
+    "- The goal of the agent is to receive the most reward in each state\n",
+    "\n",
+    "<img width=\"500\" alt=\"portfolio_view\" src=\"src/Space-Invaders-RL.png\">\n",
+    "\n",
+    "\n"
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -175,11 +239,25 @@
    "outputs": [],
    "source": [
     "def buildAgent(model, actions):\n",
+    "    \"\"\"\n",
+    "        Build our agent for training\n",
+    "\n",
+    "        Args:\n",
+    "            model: our deep neural network\n",
+    "            actions: the action that the agent is going to perform\n",
+    "\n",
+    "        Returns:\n",
+    "            dqn: A Deep Q-Network agent\n",
+    "    \"\"\"\n",
+    "    # Set up our policy and memory\n",
     "    policy = LinearAnnealedPolicy(EpsGreedyQPolicy(), attr='eps', value_max=1.0, value_min=0.1, value_test=0.2, nb_steps=10000)\n",
     "    memory = SequentialMemory(limit=1000, window_length=3)\n",
+    "    \n",
+    "    # Create our Agent\n",
     "    dqn = DQNAgent(model=model, memory=memory, policy=policy, enable_dueling_network=True, dueling_type='avg', nb_actions=actions, nb_steps_warmup=1000)\n",
     "    return dqn\n",
     "\n",
+    "# Create our Agent\n",
     "dqn = buildAgent(model, actions)\n",
     "dqn.compile(Adam(lr=1e-4))"
    ]
@@ -221,31 +299,17 @@
     }
    ],
    "source": [
+    "# Train our model\n",
     "dqn.fit(env, nb_steps=10000, visualize=False, verbose=2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "Testing for 10 episodes ...\n",
-      "Episode 1: reward: 115.000, steps: 663\n",
-      "Episode 2: reward: 65.000, steps: 483\n",
-      "Episode 3: reward: 80.000, steps: 617\n",
-      "Episode 4: reward: 125.000, steps: 645\n",
-      "Episode 5: reward: 80.000, steps: 607\n",
-      "Episode 6: reward: 45.000, steps: 402\n",
-      "Episode 7: reward: 315.000, steps: 905\n",
-      "Episode 8: reward: 455.000, steps: 805\n",
-      "Episode 9: reward: 170.000, steps: 661\n",
-      "Episode 10: reward: 210.000, steps: 994\n",
-      "166.0\n"
-     ]
+     "output_type": "error"
     }
    ],
    "source": [
