change episodes from 10 to 30

--- a/game.ipynb
+++ b/game.ipynb
@@ -264,57 +264,85 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Training for 10000 steps ...\n",
-      "  594/10000: episode: 1, duration: 20.577s, episode steps: 594, steps per second:  29, episode reward: 155.000, mean reward:  0.261 [ 0.000, 30.000], mean action: 2.451 [0.000, 5.000],  loss: --, mean_q: --, mean_eps: --\n",
-      " 1088/10000: episode: 2, duration: 162.330s, episode steps: 494, steps per second:   3, episode reward: 65.000, mean reward:  0.132 [ 0.000, 20.000], mean action: 2.591 [0.000, 5.000],  loss: 22.628159, mean_q: 10.060919, mean_eps: 0.906040\n",
-      " 1939/10000: episode: 3, duration: 1278.813s, episode steps: 851, steps per second:   1, episode reward: 240.000, mean reward:  0.282 [ 0.000, 30.000], mean action: 2.501 [0.000, 5.000],  loss: 1.132383, mean_q: 7.937387, mean_eps: 0.863830\n",
-      " 2978/10000: episode: 4, duration: 1343.653s, episode steps: 1039, steps per second:   1, episode reward: 225.000, mean reward:  0.217 [ 0.000, 30.000], mean action: 2.540 [0.000, 5.000],  loss: 0.724818, mean_q: 7.831339, mean_eps: 0.778780\n",
-      " 3918/10000: episode: 5, duration: 1239.030s, episode steps: 940, steps per second:   1, episode reward: 230.000, mean reward:  0.245 [ 0.000, 30.000], mean action: 2.572 [0.000, 5.000],  loss: 0.489423, mean_q: 7.575587, mean_eps: 0.689725\n",
-      " 4558/10000: episode: 6, duration: 850.597s, episode steps: 640, steps per second:   1, episode reward: 145.000, mean reward:  0.227 [ 0.000, 30.000], mean action: 2.422 [0.000, 5.000],  loss: 0.406598, mean_q: 7.319379, mean_eps: 0.618625\n",
-      " 5312/10000: episode: 7, duration: 973.477s, episode steps: 754, steps per second:   1, episode reward: 120.000, mean reward:  0.159 [ 0.000, 30.000], mean action: 2.279 [0.000, 5.000],  loss: 0.341726, mean_q: 7.300046, mean_eps: 0.555895\n",
-      " 6307/10000: episode: 8, duration: 1257.552s, episode steps: 995, steps per second:   1, episode reward: 200.000, mean reward:  0.201 [ 0.000, 30.000], mean action: 2.462 [0.000, 5.000],  loss: 0.195047, mean_q: 6.776134, mean_eps: 0.477190\n",
-      " 7062/10000: episode: 9, duration: 1013.311s, episode steps: 755, steps per second:   1, episode reward: 310.000, mean reward:  0.411 [ 0.000, 200.000], mean action: 2.472 [0.000, 5.000],  loss: 4.763069, mean_q: 7.001327, mean_eps: 0.398440\n",
-      " 7907/10000: episode: 10, duration: 1180.486s, episode steps: 845, steps per second:   1, episode reward: 215.000, mean reward:  0.254 [ 0.000, 30.000], mean action: 2.491 [0.000, 5.000],  loss: 1.019351, mean_q: 7.466493, mean_eps: 0.326440\n",
-      " 8347/10000: episode: 11, duration: 510.306s, episode steps: 440, steps per second:   1, episode reward: 55.000, mean reward:  0.125 [ 0.000, 20.000], mean action: 2.675 [0.000, 5.000],  loss: 0.178968, mean_q: 7.154232, mean_eps: 0.268615\n",
-      " 8932/10000: episode: 12, duration: 770.603s, episode steps: 585, steps per second:   1, episode reward: 85.000, mean reward:  0.145 [ 0.000, 20.000], mean action: 2.609 [0.000, 5.000],  loss: 0.165108, mean_q: 6.659811, mean_eps: 0.222490\n",
-      "done, took 12033.450 seconds\n"
+      "Training for 5000 steps ...\n",
+      "  708/5000: episode: 1, duration: 24.454s, episode steps: 708, steps per second:  29, episode reward: 110.000, mean reward:  0.155 [ 0.000, 30.000], mean action: 2.568 [0.000, 5.000],  loss: --, mean_q: --, mean_eps: --\n",
+      " 1744/5000: episode: 2, duration: 1100.555s, episode steps: 1036, steps per second:   1, episode reward: 425.000, mean reward:  0.410 [ 0.000, 200.000], mean action: 2.449 [0.000, 5.000],  loss: 15.459784, mean_q: 7.616658, mean_eps: 0.876520\n",
+      " 2490/5000: episode: 3, duration: 1029.241s, episode steps: 746, steps per second:   1, episode reward: 365.000, mean reward:  0.489 [ 0.000, 200.000], mean action: 2.684 [0.000, 5.000],  loss: 5.944562, mean_q: 7.764208, mean_eps: 0.809515\n",
+      " 3904/5000: episode: 4, duration: 1749.460s, episode steps: 1414, steps per second:   1, episode reward: 390.000, mean reward:  0.276 [ 0.000, 30.000], mean action: 2.353 [0.000, 5.000],  loss: 0.874080, mean_q: 7.421928, mean_eps: 0.712315\n",
+      " 4588/5000: episode: 5, duration: 840.868s, episode steps: 684, steps per second:   1, episode reward: 180.000, mean reward:  0.263 [ 0.000, 30.000], mean action: 2.414 [0.000, 5.000],  loss: 0.443672, mean_q: 6.039804, mean_eps: 0.617905\n",
+      "done, took 5320.851 seconds\n"
      ]
     },
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "<tensorflow.python.keras.callbacks.History at 0x7fae048ed6d0>"
+       "<tensorflow.python.keras.callbacks.History at 0x7fc2fb364250>"
       ]
      },
      "metadata": {},
-     "execution_count": 8
+     "execution_count": 6
     }
    ],
    "source": [
     "# Train our model\n",
-    "dqn.fit(env, nb_steps=10000, visualize=False, verbose=2)"
+    "dqn.fit(env, nb_steps=5000, visualize=False, verbose=2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
-     "output_type": "error"
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Testing for 30 episodes ...\n",
+      "Episode 1: reward: 85.000, steps: 496\n",
+      "Episode 2: reward: 35.000, steps: 661\n",
+      "Episode 3: reward: 150.000, steps: 915\n",
+      "Episode 4: reward: 50.000, steps: 704\n",
+      "Episode 5: reward: 140.000, steps: 699\n",
+      "Episode 6: reward: 105.000, steps: 940\n",
+      "Episode 7: reward: 80.000, steps: 512\n",
+      "Episode 8: reward: 170.000, steps: 947\n",
+      "Episode 9: reward: 75.000, steps: 862\n",
+      "Episode 10: reward: 65.000, steps: 517\n",
+      "Episode 11: reward: 105.000, steps: 955\n",
+      "Episode 12: reward: 160.000, steps: 932\n",
+      "Episode 13: reward: 110.000, steps: 693\n",
+      "Episode 14: reward: 50.000, steps: 376\n",
+      "Episode 15: reward: 130.000, steps: 1047\n",
+      "Episode 16: reward: 15.000, steps: 386\n",
+      "Episode 17: reward: 105.000, steps: 866\n",
+      "Episode 18: reward: 140.000, steps: 920\n",
+      "Episode 19: reward: 70.000, steps: 899\n",
+      "Episode 20: reward: 10.000, steps: 518\n",
+      "Episode 21: reward: 265.000, steps: 747\n",
+      "Episode 22: reward: 165.000, steps: 1206\n",
+      "Episode 23: reward: 135.000, steps: 1211\n",
+      "Episode 24: reward: 105.000, steps: 707\n",
+      "Episode 25: reward: 50.000, steps: 642\n",
+      "Episode 26: reward: 140.000, steps: 804\n",
+      "Episode 27: reward: 210.000, steps: 1110\n",
+      "Episode 28: reward: 65.000, steps: 742\n",
+      "Episode 29: reward: 120.000, steps: 623\n",
+      "Episode 30: reward: 140.000, steps: 744\n",
+      "108.16666666666667\n"
+     ]
     }
    ],
    "source": [
     "# Run and test our AI\n",
-    "scores = dqn.test(env, nb_episodes=10, visualize=True)\n",
+    "scores = dqn.test(env, nb_episodes=30, visualize=True)\n",
     "print(np.mean(scores.history['episode_reward']))"
    ]
   },
