adding new logo

--- a/game.ipynb
+++ b/game.ipynb
@@ -32,7 +32,9 @@
     "\n",
     "- Using **OpenAI Atari Library** (gym) to provide the environment for Space Invader\n",
     "- Using **Convolutional Neural Network** (Tensorflow and Keras) to create our training model\n",
-    "- Using **Reinforcement Learning** (Keras-RL2) to train our program to play Space Invader"
+    "- Using **Reinforcement Learning** (Keras-RL2) to train our program to play Space Invader\n",
+    "\n",
+    "![](src/Logo.png)"
    ],
    "cell_type": "markdown",
    "metadata": {}
